Fixed issue of progress bar padding covering the project buttons on mobile using z-index.

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -8,12 +8,13 @@
     left: 0;
     padding-top: 50px;
     text-align: center;
-    color: #C766BB;
+    color: #c766bb;
     font-style: 36px;
 
     @include mobile {
       padding-top: calc(100vh - 100px);
       font-size: 24px;
+      z-index: 1;
     }
 
     .progressBar {
@@ -90,12 +91,16 @@
         }
 
         button {
-          background-color: #C766BB;
+          background-color: #c766bb;
           border: none;
           border-radius: 10px;
           padding: 10px;
           width: 200px;
           cursor: pointer;
+
+          @include mobile {
+            z-index: 2;
+          }
         }
       }
     }
